[package]
name = "serverlistplus-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-tungstenite = {version = "0.20", features = ["default", "native-tls"]}
reqwest = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.9"

futures-util = "0.3"
data-view = "5.1.0"