[package]
name = "serverlistplus-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper-tungstenite = "0.11.1"
tokio-tungstenite = {version = "0.20", features = ["default", "native-tls"]}
reqwest = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.9"

futures-util = "0.3"
futures-enum = "0.1"
futures-core = "0.3"
futures = "0.3"

url = "2.4.0"
tokio-socks = "0.5.1"
base64 = "0.21.2"